feat(inventory-service): simple inventory service with checkInventory get method and pom.xml created to root folder as parent module for microservices

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/orderService
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventoryService
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -19,4 +20,4 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
-service.port = 8081
+server.port=8082
