--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://melihcancilek:etUE2mnuxPfgkjYw@cluster0.abicxiu.mongodb.net/PRODUCTSERVICEINMICROSERVICE?ssl=true
+
+server.port = 8080
