feat(discovery-service): discovery service create to register endpoints in a single center manager named Eureka Server and register all modules to that server as Eureka Client

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8082
+server.port=0
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=inventory-service
