--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://melihcancilek:etUE2mnuxPfgkjYw@cluster0.abicxiu.mongodb.net/PRODUCTSERVICEINMICROSERVICE?ssl=true
 
 server.port = 8080
+eureka.client.service-url.default-zone = http://localhost:8761/eureka
+spring.application.name=product-service
