--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
 			<version>4.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-commons</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
