--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.main.allow-bean-definition-overriding=true
+
 server.port=8081
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=order-service
