--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.cloud.gateway.routes[2].filters[0]=RewritePath=/eureka/web,/
 spring.cloud.gateway.routes[3].id=discovery-service-static-resources
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservice-realm
+
+```
