--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://melihcancilek:etUE2mnuxPfgkjYw@cluster0.abicxiu.mongodb.net/PRODUCTSERVICEINMICROSERVICE?ssl=true
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_CLUSTER_URL}/${MONGODB_DATABASE_NAME}?ssl=true
 
 server.port = 0
 eureka.client.service-url.default-zone = http://localhost:8761/eureka
