--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -22,5 +22,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.main.allow-bean-definition-overriding=true
 
 server.port=8081
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=order-service
