--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
+eureka.instance.prefer-ip-address=true
