fix(order-service): circuit breaker implementation with resilience4j and its configurations with timeout, retry mechanisms and fallback method definition.

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -19,8 +19,31 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.main.allow-bean-definition-overriding=true
-
 server.port=8081
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=order-service
+logging.level.io.netty=debug
+
+## Circuit Breaker (Resilience4j)
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+management.health.ratelimiters.enabled=true
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+
+## Resilience4j
+resilience4j.circuitbreaker.instances.inventory.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.autoTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.timelimiter.instances.inventory.timeoutDuration=3s
+
+## Resilience4j Retry
+resilience4j.retry.instances.inventory.maxRetryAttempts=3
+resilience4j.retry.instances.inventory.waitDuration=5s
