fix(distributed-tracing): Distributed tracing implementation using Zipkin and Micrometer tracing bridge

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -47,3 +47,9 @@ resilience4j.timelimiter.instances.inventory.timeoutDuration=3s
 ## Resilience4j Retry
 resilience4j.retry.instances.inventory.maxRetryAttempts=3
 resilience4j.retry.instances.inventory.waitDuration=5s
+
+spring.zipkin.base-url=http://localhost:9411
+
+#Means that all requests will be sampled.
+spring.sleuth.sampler.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
