--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -30,4 +30,8 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservice-realm
 
-```
+spring.zipkin.base-url=http://localhost:9411
+
+#Means that all requests will be sampled.
+spring.sleuth.sampler.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
