--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -24,3 +24,9 @@ server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
 eureka.instance.prefer-ip-address=true
+
+spring.zipkin.base-url=http://localhost:9411
+
+#Means that all requests will be sampled.
+spring.sleuth.sampler.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
