--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.data.mongodb.uri=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${
 server.port = 0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=product-service
+
+spring.zipkin.base-url=http://localhost:9411
+
+#Means that all requests will be sampled.
+spring.sleuth.sampler.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
