--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -35,3 +35,4 @@ spring.zipkin.base-url=http://localhost:9411
 #Means that all requests will be sampled.
 spring.sleuth.sampler.probability=1.0
 spring.cloud.compatibility-verifier.enabled=false
+spring.sleuth.integration.enabled=true
