--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -53,3 +53,12 @@ spring.zipkin.base-url=http://localhost:9411
 #Means that all requests will be sampled.
 spring.sleuth.sampler.probability=1.0
 spring.cloud.compatibility-verifier.enabled=false
+spring.sleuth.integration.enabled=true
+
+
+## Kafka properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.melihcanclk.orderservice.event.OrderPlacedEvent
