--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.zipkin.base-url=http://localhost:9411
 
 #Means that all requests will be sampled.
 spring.sleuth.sampler.probability=1.0
+spring.sleuth.integration.enabled=true
 spring.cloud.compatibility-verifier.enabled=false
