fix(grafana-prometheus): grafana and prometheus configurations

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -15,18 +15,28 @@ spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/orders
 
+## Inventory Service Route
+spring.cloud.gateway.routes[2].id=inventory-service
+spring.cloud.gateway.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/inventories
+
+## Notification Service Route
+spring.cloud.gateway.routes[3].id=notification-service
+spring.cloud.gateway.routes[3].uri=lb://notification-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/notifications
+
 ## Discovery Service Route
-spring.cloud.gateway.routes[2].id=discovery-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8761
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[2].filters[0]=RewritePath=/eureka/web,/
+spring.cloud.gateway.routes[4].id=discovery-service
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[4].filters[0]=RewritePath=/eureka/web,/
 ## if we only define discovery service like above, we can be able to access eureka dasboard using http://localhost:8080/eureka/web
 ## but not js and css files, so we need to add below routes as well
 
 ## Discovery Service Static Resources Route
-spring.cloud.gateway.routes[3].id=discovery-service-static-resources
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[5].id=discovery-service-static-resources
+spring.cloud.gateway.routes[5].uri=http://localhost:8761
+spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservice-realm
 
@@ -36,3 +46,6 @@ spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 spring.cloud.compatibility-verifier.enabled=false
 spring.sleuth.integration.enabled=true
+
+# Actuator Prometheus endpoint exposure
+management.endpoints.web.exposure.include=prometheus
