--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=0
+server.port=41743
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
 eureka.instance.prefer-ip-address=true
@@ -31,3 +31,6 @@ spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 spring.cloud.compatibility-verifier.enabled=false
 spring.sleuth.integration.enabled=true
+
+# Actuator Prometheus endpoint exposure
+management.endpoints.web.exposure.include= prometheus
