--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_CLUSTER_URL}/${MONGODB_DATABASE_NAME}?ssl=true
 
-server.port = 0
+server.port = 35863
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=product-service
 
@@ -10,3 +10,6 @@ spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.integration.enabled=true
 spring.cloud.compatibility-verifier.enabled=false
+
+# Actuator Prometheus endpoint exposure
+management.endpoints.web.exposure.include=prometheus
