--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
 spring.application.name=notification-service
-server.port=0
+server.port=43197
 
 spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.integration.enabled=true
@@ -14,3 +14,6 @@ spring.kafka.consumer.group-id=notificationGroupId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.melihcanclk.notificationservice.events.OrderPlacedEvent
+
+# Actuator Prometheus endpoint exposure
+management.endpoints.web.exposure.include= prometheus
