--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>spring-kafka</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
