feat(swagger-ui): swagger initialization for microservices and api gateway entegration.

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventoryService
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
+spring.datasource.username=melihcan
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # Keep the connection alive if idle for a long time (needed in production)
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=41743
+server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
 eureka.instance.prefer-ip-address=true
@@ -34,3 +34,10 @@ spring.sleuth.integration.enabled=true
 
 # Actuator Prometheus endpoint exposure
 management.endpoints.web.exposure.include= prometheus
+
+openapi.service.title=Inventory Service
+openapi.service.version=1.0.0
+openapi.service.description=Inventory Service
+openapi.service.url=localhost:8181
+springdoc.api-docs.path=/inventory-service/v3/api-docs
+springdoc.swagger-ui.path=/inventory-service/swagger-ui.html
