--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -6,3 +6,10 @@ spring.datasource.password=password
 management.zipkin.tracing.endpoint=http://zipkin:9411
  spring.kafka.bootstrap-servers=kafka:29092
 eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
+
+openapi.service.title=Order Service
+openapi.service.version=1.0.0
+openapi.service.description=Order Service
+openapi.service.url=localhost:8181
+springdoc.api-docs.path=/order-service/v3/api-docs
+springdoc.swagger-ui.path=/order-service/swagger-ui.html
