--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -5,3 +5,10 @@ management.zipkin.tracing.endpoint=http://zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
 # Actuator Prometheus endpoint exposure
 management.endpoints.web.exposure.include=prometheus
+
+openapi.service.title=Product Service
+openapi.service.version=1.0.0
+openapi.service.description=Product Service
+openapi.service.url=localhost:8181
+springdoc.api-docs.path=/product-service/v3/api-docs
+springdoc.swagger-ui.path=/product-service/swagger-ui.html
