--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=api-gateway
 server.port=8181
+server.servlet.context-path=/
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
@@ -31,6 +32,23 @@ spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/spring-boot-microservice-realm
+
+## Swagger Routes
+springdoc.swagger-ui.configUrl=/v3/api-docs/swagger-config
+springdoc.swagger-ui.urls[0].name=Inventory Service APIs
+springdoc.swagger-ui.urls[0].url=/inventory-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Notification Service APIs
+springdoc.swagger-ui.urls[1].url=/notification-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Order Service APIs
+springdoc.swagger-ui.urls[2].url=/order-service/v3/api-docs
+springdoc.swagger-ui.urls[3].name=Product Service APIs
+springdoc.swagger-ui.urls[3].url=/product-service/v3/api-docs
+
+springdoc.enable-native-support=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 
 spring.zipkin.base-url=http://localhost:9411
 
