--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -8,3 +8,10 @@ spring.kafka.bootstrap-servers=kafka:29092
 eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
 # Actuator Prometheus endpoint exposure
 management.endpoints.web.exposure.include=prometheus
+
+openapi.service.title=Inventory Service
+openapi.service.version=1.0.0
+openapi.service.description=Inventory Service
+openapi.service.url=localhost:8181
+springdoc.api-docs.path=/inventory-service/v3/api-docs
+springdoc.swagger-ui.path=/inventory-service/swagger-ui.html
