--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring-cloud.version>2022.0.1</spring-cloud.version>
+        <spring-boot.version>2.7.17</spring-boot.version>
         <testcontainers.version>1.17.6</testcontainers.version>
     </properties>
 
