feat(README.md): README.md create and test if services working correctly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
   keycloak-mysql:
     container_name: keycloak-mysql
     image: mysql:5.7
+    ports:
+      - "3306:3306"
     volumes:
       - ./mysql_keycloak_data:/var/lib/mysql
     environment:
@@ -60,7 +62,6 @@ services:
     container_name: zipkin
     ports:
       - "9411:9411"
-
 
   prometheus:
     image: prom/prometheus
